# stochastic-raytracer

./: .gitignore  CMakeLists.txt  README.md  image.ppm
src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  rng.h  sphere.h  vec3.h
